deploy: 03d7b26dc39db0fca18fb5998783783b9094b932

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.fdqCkULv.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.67YPHARI.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.ShABrYoX.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.rBi4U24X.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.zNNpPF7_.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.cBCQ_Z-M.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.-9yq5WqP.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.ZsEPg5bm.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index._W6S0DZH.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.2PYheOYf.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.QgfkXxLq.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_1lpk7o1 = {
+					__sveltekit_wtm9eh = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -29,8 +29,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.67YPHARI.js"),
-						import("./_app/immutable/entry/app.-9yq5WqP.js")
+						import("./_app/immutable/entry/start.rBi4U24X.js"),
+						import("./_app/immutable/entry/app.ZsEPg5bm.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
