deploy: f9dd3ba4d593697ee692fa298729792e279996ee

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.fdqCkULv.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.-LPxtqxi.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.1WuIl3l2.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.5WuKaPSj.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.A3d4cIWi.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.cBCQ_Z-M.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.JioMLRq-.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.xXzMDbpA.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index._W6S0DZH.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.2PYheOYf.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.hq6IBR7z.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_1hal7a6 = {
+					__sveltekit_9iq4b4 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -29,8 +29,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.-LPxtqxi.js"),
-						import("./_app/immutable/entry/app.JioMLRq-.js")
+						import("./_app/immutable/entry/start.5WuKaPSj.js"),
+						import("./_app/immutable/entry/app.xXzMDbpA.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
