deploy: 7c4db709bf17108102325ee5597f870c63df7dc2

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.fdqCkULv.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.RudNAIz3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.qOvxWKIS.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.TcwLyiXj.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.-vHoFJOf.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.cBCQ_Z-M.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.NLblPGpd.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.FPfBh4xQ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index._W6S0DZH.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.2PYheOYf.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.hq6IBR7z.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_8ggdpx = {
+					__sveltekit_lear5l = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -29,8 +29,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.RudNAIz3.js"),
-						import("./_app/immutable/entry/app.NLblPGpd.js")
+						import("./_app/immutable/entry/start.TcwLyiXj.js"),
+						import("./_app/immutable/entry/app.FPfBh4xQ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
