deploy: f857e71f68ce7610f7ef97d6b8b2f79c22ddc139

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.fdqCkULv.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.pvRW5KD3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.I0ZzO0ra.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.pXhvp4k5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.MGvGGAyk.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.cBCQ_Z-M.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Ls99yFnQ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.fY64aJX8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index._W6S0DZH.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.2PYheOYf.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.G3sUfjOo.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_1uh39n8 = {
+					__sveltekit_tnwgkz = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -29,8 +29,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.pvRW5KD3.js"),
-						import("./_app/immutable/entry/app.Ls99yFnQ.js")
+						import("./_app/immutable/entry/start.pXhvp4k5.js"),
+						import("./_app/immutable/entry/app.fY64aJX8.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
