--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.fdqCkULv.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.jz5a-ncn.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.FvOlQYzH.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.ubkPVY5t.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.ABp0fN0d.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.cBCQ_Z-M.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.GgkB63-0.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.s5p6Dghg.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index._W6S0DZH.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.2PYheOYf.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.udKBaW8n.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_1o5gkd4 = {
+					__sveltekit_rp7h5i = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -29,8 +29,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.jz5a-ncn.js"),
-						import("./_app/immutable/entry/app.GgkB63-0.js")
+						import("./_app/immutable/entry/start.ubkPVY5t.js"),
+						import("./_app/immutable/entry/app.s5p6Dghg.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
