--- a/src/app.html
+++ b/src/app.html
@@ -3,8 +3,9 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="stylesheet" href="%sveltekit.assets%/reset.css" />
 		<meta name="viewport" content="width=device-width" />
-		<title>OpenAI Chat Visualizer</title>
+		<title>OpenAI GUI Utils</title>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
