--- a/embeddings.html
+++ b/embeddings.html
@@ -9,13 +9,13 @@
 		
 		<link href="./_app/immutable/assets/0.J5r0XgYs.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.UewVZLQf.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.q0l9RyAp.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.8EhkZOYX.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.-rM1z4qB.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.EDg27qAY.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.KqCp1VWV.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.st3W-Cp_.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.83AZqFdq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Z3YDkVAm.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.oUGsMvtd.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.ZM-7C0KN.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.5xH-GKE9.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.YHqcZXW-.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.vG6r5pYl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.A6GNbPRI.js">
 	</head>
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_9pcuez = {
+					__sveltekit_1rvwjug = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -34,8 +34,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.q0l9RyAp.js"),
-						import("./_app/immutable/entry/app.st3W-Cp_.js")
+						import("./_app/immutable/entry/start.-rM1z4qB.js"),
+						import("./_app/immutable/entry/app.83AZqFdq.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
