--- a/embeddings.html
+++ b/embeddings.html
@@ -9,24 +9,25 @@
 		
 		<link href="./_app/immutable/assets/0.J5r0XgYs.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.UewVZLQf.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.-rM1z4qB.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.EDg27qAY.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.bC8a0hdz.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.RM306Y7B.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.KqCp1VWV.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.83AZqFdq.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.RumxKPIc.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Z3YDkVAm.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.5xH-GKE9.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.YHqcZXW-.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.oIbSlJ07.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.q3-DV46f.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.vG6r5pYl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.A6GNbPRI.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">  <header class="svelte-1qgrqm"><h1 class="svelte-1qgrqm" data-svelte-h="svelte-1t6bxs0">OpenAI GUI Utils</h1> <nav class="svelte-1qgrqm"><a href="/" class="svelte-1qgrqm" data-svelte-h="svelte-1xwway2">Home</a> <a href="/completions" class="svelte-1qgrqm" data-svelte-h="svelte-bsp1sm">Completion API Visualizer</a> <a href="/embeddings" class="svelte-1qgrqm selected" data-svelte-h="svelte-m8su1w">Embeddings and Cosine Similarity Checker</a></nav> <a href="https://github.com/baseballyama/openai-gui-utils" target="_blank" rel="noopener noreferrer"><svg version="1.1" width="32" height="32" viewBox="0 0 16 16" class="octicon octicon-mark-github svelte-92nypd svelte-1bvf986" aria-hidden="true"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z" class="svelte-92nypd" style="fill: rgb(44, 62, 80);"></path></svg> </a></header> <main class="svelte-1qgrqm"><p class="openai-api-key svelte-1ruqg1j" data-svelte-h="svelte-1bemo3x">OpenAI API key</p> <input placeholder="OpenAI API key" class="api-input svelte-1ruqg1j" value=""> <p class="input-error svelte-1ruqg1j"></p> <ul class="svelte-1ruqg1j" data-svelte-h="svelte-xcuk7k"><li class="svelte-1ruqg1j">Sentence1</li> <li class="svelte-1ruqg1j">Sentence2</li> <li class="svelte-1ruqg1j">Cosine Similarity</li> <li class="svelte-1ruqg1j">Delete</li></ul> <ul class="svelte-1ruqg1j"><li class="svelte-1ruqg1j"><textarea placeholder="Input your sentence" class="svelte-1ruqg1j"></textarea> </li> <li class="svelte-1ruqg1j"><textarea placeholder="Input your sentence" class="svelte-1ruqg1j"></textarea> </li> <li class="svelte-1ruqg1j">(Not Embedded)</li> <li class="svelte-1ruqg1j"><button class="svelte-1ruqg1j" data-svelte-h="svelte-h73lb">Delete</button></li> </ul> <div class="buttons svelte-1ruqg1j"><button class="svelte-1ruqg1j" data-svelte-h="svelte-bmdsrz">+ Add</button> <button class="execute-button svelte-1ruqg1j" data-svelte-h="svelte-s3q32i">Embeddings</button></div> </main> <footer class="footer svelte-1qgrqm" data-svelte-h="svelte-1fbpllg">Created by
+		<div style="display: contents">  <header class="svelte-1qgrqm"><h1 class="svelte-1qgrqm" data-svelte-h="svelte-1t6bxs0">OpenAI GUI Utils</h1> <nav class="svelte-1qgrqm"><a href="./" class="svelte-1qgrqm" data-svelte-h="svelte-gigk75">Home</a> <a href="completions" class="svelte-1qgrqm" data-svelte-h="svelte-kt52bj">Completion API Visualizer</a> <a href="embeddings" class="svelte-1qgrqm" data-svelte-h="svelte-16dt52">Embeddings and Cosine Similarity Checker</a></nav> <a href="https://github.com/baseballyama/openai-gui-utils" target="_blank" rel="noopener noreferrer"><svg version="1.1" width="32" height="32" viewBox="0 0 16 16" class="octicon octicon-mark-github svelte-92nypd svelte-1bvf986" aria-hidden="true"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z" class="svelte-92nypd" style="fill: rgb(44, 62, 80);"></path></svg> </a></header> <main class="svelte-1qgrqm"><p class="openai-api-key svelte-1ruqg1j" data-svelte-h="svelte-1bemo3x">OpenAI API key</p> <input placeholder="OpenAI API key" class="api-input svelte-1ruqg1j" value=""> <p class="input-error svelte-1ruqg1j"></p> <ul class="svelte-1ruqg1j" data-svelte-h="svelte-xcuk7k"><li class="svelte-1ruqg1j">Sentence1</li> <li class="svelte-1ruqg1j">Sentence2</li> <li class="svelte-1ruqg1j">Cosine Similarity</li> <li class="svelte-1ruqg1j">Delete</li></ul> <ul class="svelte-1ruqg1j"><li class="svelte-1ruqg1j"><textarea placeholder="Input your sentence" class="svelte-1ruqg1j"></textarea> </li> <li class="svelte-1ruqg1j"><textarea placeholder="Input your sentence" class="svelte-1ruqg1j"></textarea> </li> <li class="svelte-1ruqg1j">(Not Embedded)</li> <li class="svelte-1ruqg1j"><button class="svelte-1ruqg1j" data-svelte-h="svelte-h73lb">Delete</button></li> </ul> <div class="buttons svelte-1ruqg1j"><button class="svelte-1ruqg1j" data-svelte-h="svelte-bmdsrz">+ Add</button> <button class="execute-button svelte-1ruqg1j" data-svelte-h="svelte-s3q32i">Embeddings</button></div> </main> <footer class="footer svelte-1qgrqm" data-svelte-h="svelte-1fbpllg">Created by
 	<a href="https://github.com/baseballyama" target="_blank" rel="noopener noreferrer" class="svelte-1qgrqm">baseballyama</a> </footer> 
 			
 			<script>
 				{
-					__sveltekit_1rvwjug = {
-						base: new URL(".", location).pathname.slice(0, -1)
+					__sveltekit_vc47ys = {
+						base: new URL(".", location).pathname.slice(0, -1),
+						assets: "/openai-gui-utils"
 					};
 
 					const element = document.currentScript.parentElement;
@@ -34,8 +35,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.-rM1z4qB.js"),
-						import("./_app/immutable/entry/app.83AZqFdq.js")
+						import("./_app/immutable/entry/start.bC8a0hdz.js"),
+						import("./_app/immutable/entry/app.RumxKPIc.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
