--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 		
 		<link href="./_app/immutable/assets/0.J5r0XgYs.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.mYvD1gVy.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.bC8a0hdz.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.RM306Y7B.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.GaCF0jMi.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.zrLh_1up.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.KqCp1VWV.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.RumxKPIc.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.mtpliMYB.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Z3YDkVAm.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.oIbSlJ07.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.q3-DV46f.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.QK-grcR9.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.nVPM0yNT.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.hsVzt6eF.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_vc47ys = {
+					__sveltekit_wckmzd = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -35,8 +35,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.bC8a0hdz.js"),
-						import("./_app/immutable/entry/app.RumxKPIc.js")
+						import("./_app/immutable/entry/start.GaCF0jMi.js"),
+						import("./_app/immutable/entry/app.mtpliMYB.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
