deploy: dbfc82e967628e9fcce9beabac6d8e2f72dc8924

--- a/embeddings.html
+++ b/embeddings.html
@@ -9,13 +9,13 @@
 		
 		<link href="./_app/immutable/assets/0.J5r0XgYs.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.UewVZLQf.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.GaCF0jMi.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.zrLh_1up.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.kxqxU1Ew.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.1eJ_QqoK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.KqCp1VWV.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.mtpliMYB.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.jDEFSjs_.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Z3YDkVAm.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.QK-grcR9.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.nVPM0yNT.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.RFf1LiC3.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.0c97lyIp.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.vG6r5pYl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.A6GNbPRI.js">
 	</head>
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_wckmzd = {
+					__sveltekit_gr6umy = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -35,8 +35,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.GaCF0jMi.js"),
-						import("./_app/immutable/entry/app.mtpliMYB.js")
+						import("./_app/immutable/entry/start.kxqxU1Ew.js"),
+						import("./_app/immutable/entry/app.jDEFSjs_.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
