--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 		
 		<link href="./_app/immutable/assets/0.J5r0XgYs.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.mYvD1gVy.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.kxqxU1Ew.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.1eJ_QqoK.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.f99Nn8-f.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.WxlluzPM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.KqCp1VWV.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.jDEFSjs_.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.WQ-1t3yS.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Z3YDkVAm.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.RFf1LiC3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.0c97lyIp.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DXRfh75y.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Gw7CJZtb.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.hsVzt6eF.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_gr6umy = {
+					__sveltekit_sus9dj = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -35,8 +35,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.kxqxU1Ew.js"),
-						import("./_app/immutable/entry/app.jDEFSjs_.js")
+						import("./_app/immutable/entry/start.f99Nn8-f.js"),
+						import("./_app/immutable/entry/app.WQ-1t3yS.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
