--- a/embeddings.html
+++ b/embeddings.html
@@ -9,13 +9,13 @@
 		
 		<link href="./_app/immutable/assets/0.J5r0XgYs.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.UewVZLQf.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.f99Nn8-f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.WxlluzPM.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.pK3NWWVP.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.tUIyoIs3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.KqCp1VWV.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.WQ-1t3yS.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.QWodXCDm.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Z3YDkVAm.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DXRfh75y.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Gw7CJZtb.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.JWOkMKbK.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.bDWoGE6Q.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.vG6r5pYl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.A6GNbPRI.js">
 	</head>
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_sus9dj = {
+					__sveltekit_5vyhnh = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -35,8 +35,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.f99Nn8-f.js"),
-						import("./_app/immutable/entry/app.WQ-1t3yS.js")
+						import("./_app/immutable/entry/start.pK3NWWVP.js"),
+						import("./_app/immutable/entry/app.QWodXCDm.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
