--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 		
 		<link href="./_app/immutable/assets/0.J5r0XgYs.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.mYvD1gVy.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.rpSPnjpr.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.SuGuV2qM.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.3oPZ9VoN.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.kcF-sgyp.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.KqCp1VWV.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.o5eMkUnK.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.LJS7-HBx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Z3YDkVAm.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.GsUFpU2a.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Q9o0O1si.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.fXD3Au5b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.1RkQB0oP.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.hsVzt6eF.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_1vp3h24 = {
+					__sveltekit_l6itrz = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -35,8 +35,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.rpSPnjpr.js"),
-						import("./_app/immutable/entry/app.o5eMkUnK.js")
+						import("./_app/immutable/entry/start.3oPZ9VoN.js"),
+						import("./_app/immutable/entry/app.LJS7-HBx.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
