--- a/completions.html
+++ b/completions.html
@@ -9,13 +9,13 @@
 		
 		<link href="./_app/immutable/assets/0.J5r0XgYs.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.UiXoLPRZ.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.EQ0zk4sc.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DaGzqzy0.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.1aPXA0JZ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Y3p_CuwT.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.KqCp1VWV.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.NMhS3OGV.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.So3WIMj-.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Z3YDkVAm.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.25YmJPqE.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.ZE73bQI8.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CzxzD4-l.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BX2rirHJ.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/3.E4MsriIH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.A6GNbPRI.js">
 	</head>
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_a8jvv8 = {
+					__sveltekit_1qiluf = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -35,8 +35,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.EQ0zk4sc.js"),
-						import("./_app/immutable/entry/app.NMhS3OGV.js")
+						import("./_app/immutable/entry/start.1aPXA0JZ.js"),
+						import("./_app/immutable/entry/app.So3WIMj-.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
