--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 		
 		<link href="./_app/immutable/assets/0.J5r0XgYs.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.mYvD1gVy.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.1aPXA0JZ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Y3p_CuwT.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.B0PLdxZg.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.qPEuOaoK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.KqCp1VWV.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.So3WIMj-.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Oql77Q93.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Z3YDkVAm.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CzxzD4-l.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BX2rirHJ.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.HkulLPdh.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.3w33oR4r.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.hsVzt6eF.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_1qiluf = {
+					__sveltekit_19whlso = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -35,8 +35,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.1aPXA0JZ.js"),
-						import("./_app/immutable/entry/app.So3WIMj-.js")
+						import("./_app/immutable/entry/start.B0PLdxZg.js"),
+						import("./_app/immutable/entry/app.Oql77Q93.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
