deploy: dc5dc66b229eb8e58e070c9617f813bde7281dad

--- a/embeddings.html
+++ b/embeddings.html
@@ -9,13 +9,13 @@
 		
 		<link href="./_app/immutable/assets/0.J5r0XgYs.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.UewVZLQf.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.B0PLdxZg.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.qPEuOaoK.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.Lag86djp.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.28VDIN6K.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.KqCp1VWV.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Oql77Q93.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.JFwXCEJC.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Z3YDkVAm.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.HkulLPdh.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.3w33oR4r.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.XXzhC8H3.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.aoZbp_B6.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.vG6r5pYl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.A6GNbPRI.js">
 	</head>
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_19whlso = {
+					__sveltekit_978o2m = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -35,8 +35,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.B0PLdxZg.js"),
-						import("./_app/immutable/entry/app.Oql77Q93.js")
+						import("./_app/immutable/entry/start.Lag86djp.js"),
+						import("./_app/immutable/entry/app.JFwXCEJC.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
