--- a/embeddings.html
+++ b/embeddings.html
@@ -9,13 +9,13 @@
 		
 		<link href="./_app/immutable/assets/0.J5r0XgYs.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.UewVZLQf.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.uAw1t3Md.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.zPGdrhwW.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.nWjeMWYV.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.ddTh2wFD.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.KqCp1VWV.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.qhjG9tJV.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.v9TWereq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Z3YDkVAm.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.VDUHgb_1.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.y6_ZNIx3.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BY5MnygW.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.6gEPtuaq.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.vG6r5pYl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.A6GNbPRI.js">
 	</head>
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_18wutcv = {
+					__sveltekit_1n4osra = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -35,8 +35,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.uAw1t3Md.js"),
-						import("./_app/immutable/entry/app.qhjG9tJV.js")
+						import("./_app/immutable/entry/start.nWjeMWYV.js"),
+						import("./_app/immutable/entry/app.v9TWereq.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
