--- a/completions.html
+++ b/completions.html
@@ -9,14 +9,14 @@
 		
 		<link href="./_app/immutable/assets/0.J5r0XgYs.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.UiXoLPRZ.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.oX80zIZX.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.RRjVv0Xt.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.YoO19tz_.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.K_QdTOds.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.KqCp1VWV.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.xUq_FMfc.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.qGPCTI4D.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Z3YDkVAm.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.-vxgswAq.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.ZP4PBSeZ.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.z_S3ZrDA.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.osNX2Av_.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.h_RiL5zv.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.IZfGk3Zu.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.A6GNbPRI.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_1neyq7n = {
+					__sveltekit_xcdzli = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -35,8 +35,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.oX80zIZX.js"),
-						import("./_app/immutable/entry/app.xUq_FMfc.js")
+						import("./_app/immutable/entry/start.YoO19tz_.js"),
+						import("./_app/immutable/entry/app.qGPCTI4D.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
