deploy: ad0c0af52288a7733b6b8c5d96571b39b84a394b

--- a/completions.html
+++ b/completions.html
@@ -9,13 +9,13 @@
 		
 		<link href="./_app/immutable/assets/0.J5r0XgYs.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.UiXoLPRZ.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.YoO19tz_.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.K_QdTOds.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.4L4SiwbK.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Gk8LbK8E.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.KqCp1VWV.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.qGPCTI4D.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.RPiKMRC1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Z3YDkVAm.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.osNX2Av_.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.h_RiL5zv.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.waNsJSF7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.NZSYIA5y.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/3.IZfGk3Zu.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.A6GNbPRI.js">
 	</head>
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_xcdzli = {
+					__sveltekit_rrspbu = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -35,8 +35,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.YoO19tz_.js"),
-						import("./_app/immutable/entry/app.qGPCTI4D.js")
+						import("./_app/immutable/entry/start.4L4SiwbK.js"),
+						import("./_app/immutable/entry/app.RPiKMRC1.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
