deploy: c33f60be38052cbbe8e1ba4cc256e5a2c88c9b48

--- a/embeddings.html
+++ b/embeddings.html
@@ -9,13 +9,13 @@
 		
 		<link href="./_app/immutable/assets/0.J5r0XgYs.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.UewVZLQf.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start._0jxrIwy.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.VIBMRmAE.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.ksiz1MvT.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.PyBtAN7N.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.KqCp1VWV.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.KZHplxm9.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.NF1v7u9n.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Z3YDkVAm.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.ncIgTOXM.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.LdQcqK47.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.KTIeQlDg.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.GPiG06nx.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.vG6r5pYl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.A6GNbPRI.js">
 	</head>
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_lcem5a = {
+					__sveltekit_vmhzqt = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -35,8 +35,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start._0jxrIwy.js"),
-						import("./_app/immutable/entry/app.KZHplxm9.js")
+						import("./_app/immutable/entry/start.ksiz1MvT.js"),
+						import("./_app/immutable/entry/app.NF1v7u9n.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
