deploy: 4e52a17ec65868a808a1d5178ab602fafef64f36

--- a/embeddings.html
+++ b/embeddings.html
@@ -9,13 +9,13 @@
 		
 		<link href="./_app/immutable/assets/0.nmvReBiz.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.BR7BVktB.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.f6dR8Yj3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BXIq1LNK.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CN5MxKcy.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DsrwxMBp.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.CG7sC2st.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Byy8-p0P.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.yww85Oln.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Bv8dtsBR.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.C8T2TsgD.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BjTTtuR0.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DB2ACLFx.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CC2nUCvW.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.H3O0hUqm.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.CL2J1vmT.js">
 	</head>
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_19w4cze = {
+					__sveltekit_5vutx5 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -35,8 +35,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.f6dR8Yj3.js"),
-						import("./_app/immutable/entry/app.Byy8-p0P.js")
+						import("./_app/immutable/entry/start.CN5MxKcy.js"),
+						import("./_app/immutable/entry/app.yww85Oln.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
