deploy: 2c0ea19ea91e391d7bf60c161aa742c357076c71

--- a/completions.html
+++ b/completions.html
@@ -9,13 +9,13 @@
 		
 		<link href="./_app/immutable/assets/0.nmvReBiz.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.BSJegs9F.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CN5MxKcy.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DsrwxMBp.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.6NqRCqI2.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.bIMF_njx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.CG7sC2st.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.yww85Oln.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CAI2ny2R.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Bv8dtsBR.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DB2ACLFx.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CC2nUCvW.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CbBkE4E4.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.B6MZx9o5.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/3.DFDEOxw8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.CL2J1vmT.js">
 	</head>
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_5vutx5 = {
+					__sveltekit_1sz0erh = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -35,8 +35,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CN5MxKcy.js"),
-						import("./_app/immutable/entry/app.yww85Oln.js")
+						import("./_app/immutable/entry/start.6NqRCqI2.js"),
+						import("./_app/immutable/entry/app.CAI2ny2R.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
