deploy: 76151e42b4cb3002493617ea9a7c537df7f6707c

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CZi8PWBX.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.bG_fhutj.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BtBTcHlJ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DtBHZNR3.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.RzK1z1C8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.DtJnzEBV.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CawsFLOd.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BeZKF0LZ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.GshhNGg8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.Bzc4xlhG.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.BTQBtVcH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.4n8uYBtG.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DVYJ9CAq.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BCM8L41c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.BTj3NxHq.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CjUSyzwB.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DBLnNNqE.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.B83Hhwwq.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.Bm0aDAgT.js">
 	</head>
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_s2bz3w = {
+					__sveltekit_6igw1d = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.bG_fhutj.js"),
-						import("./_app/immutable/entry/app.CawsFLOd.js")
+						import("./_app/immutable/entry/start.DtBHZNR3.js"),
+						import("./_app/immutable/entry/app.BeZKF0LZ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
