deploy: 83b81f3ad8d8196c13775815788beed5816d0235

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CZi8PWBX.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Bn61gNRi.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.UcCXJV0T.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.9-hbMsxt.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DGStqYJK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.DtJnzEBV.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Dm_IVq_w.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Oq6CzyZG.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.GshhNGg8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.Bzc4xlhG.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.BTQBtVcH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.4n8uYBtG.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BOzGUAqs.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.qFLgfD_k.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.BTj3NxHq.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CVJGnnka.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.dkYo0sbM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.B83Hhwwq.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.Bm0aDAgT.js">
 	</head>
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_178s4z = {
+					__sveltekit_u9cwcf = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Bn61gNRi.js"),
-						import("./_app/immutable/entry/app.Dm_IVq_w.js")
+						import("./_app/immutable/entry/start.9-hbMsxt.js"),
+						import("./_app/immutable/entry/app.Oq6CzyZG.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
