deploy: 08556bfabfe74fa147ae6acf43c3e724d1b61118

--- a/embeddings.html
+++ b/embeddings.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.BfC-7cBh.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CON69TqT.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BjCj5_dV.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CkW0KOuc.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DqzNqw4z.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.DtJnzEBV.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.o0FXQ3jO.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.C3SU4rJQ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.GshhNGg8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.Bzc4xlhG.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.BTQBtVcH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.4n8uYBtG.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.RsRhbeKz.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BgbeRNpE.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.BTj3NxHq.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DZm9kW0i.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BGLEyEdS.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.B83Hhwwq.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.BHrkrsYp.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.Cx5oWuxk.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_a37pga = {
+					__sveltekit_17n4p0z = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CON69TqT.js"),
-						import("./_app/immutable/entry/app.o0FXQ3jO.js")
+						import("./_app/immutable/entry/start.CkW0KOuc.js"),
+						import("./_app/immutable/entry/app.C3SU4rJQ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
